include_directories(${UT_INCLUDE_DIRECTORIES})

if(BUILD_SHARED_LIBS)
  add_definitions("-DGTEST_LINKED_AS_SHARED_LIBRARY=1")
endif()

if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
  set(fptu0_trivia_timeout 60)
  set(fptu5_remove_timeout 30)
  set(fptu6_shrink_timeout 60)
else()
  set(fptu0_trivia_timeout 5)
  set(fptu5_remove_timeout 25)
  set(fptu6_shrink_timeout 40)
endif()

add_ut(fptu0_trivia TIMEOUT ${fptu0_trivia_timeout} SOURCE 0trivia.cxx LIBRARY fptu)
add_ut(fptu1_create TIMEOUT 5 SOURCE 1create.cxx LIBRARY fptu)
add_ut(fptu2_upsert TIMEOUT 5 SOURCE 2upsert.cxx LIBRARY fptu)
add_ut(fptu3_iterate TIMEOUT 5 SOURCE 3iterate.cxx LIBRARY fptu)
add_ut(fptu4_fetch TIMEOUT 5 SOURCE 4fetch.cxx LIBRARY fptu)
add_ut(fptu5_remove TIMEOUT ${fptu5_remove_timeout} SOURCE 5remove.cxx shuffle6.hpp LIBRARY fptu)
add_ut(fptu6_shrink TIMEOUT ${fptu6_shrink_timeout} SOURCE 6shrink.cxx shuffle6.hpp LIBRARY fptu)
add_ut(fptu7_compare TIMEOUT 2000 SOURCE 7compare.cxx shuffle6.hpp LIBRARY fptu)

# add_perf_test(abc_perf TIMEOUT 60 LIBRARY fptu)
# add_long_test(xyz_long TIMEOUT 600 LIBRARY fptu)

add_executable(fptu_c_mode c_mode.c)
target_link_libraries(fptu_c_mode fptu)
